# AIContext_toolkit

./: README.md  pyproject.toml  run.py
aicontext_toolkit/: __init__.py  __main__.py  base_app.py  code_converter.py  config.py  folder_scanner.py  utils.py
aicontext_toolkit.egg-info/: PKG-INFO  SOURCES.txt
